src/test/test-models/bad/compound-assign/plus_equals_vector_array.stan
generated quantities {
  vector[2] x[3] = {[1,2]', [3,4]', [5,6]'};
  vector[2] y[3] = {[1,2]', [3,4]', [5,6]'};
  x[1] += y[1];
  x += y;
}
